WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140659
ClosureCallStubRoutine no longer needs codeOrigin
https://bugs.webkit.org/show_bug.cgi?id=140659
Summary
ClosureCallStubRoutine no longer needs codeOrigin
Filip Pizlo
Reported
2015-01-19 20:04:34 PST
Patch forthcoming.
Attachments
the patch
(6.29 KB, patch)
2015-01-19 20:24 PST
,
Filip Pizlo
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-01-19 20:24:01 PST
Created
attachment 244961
[details]
the patch
Filip Pizlo
Comment 2
2015-01-19 21:01:40 PST
Landed in
http://trac.webkit.org/changeset/178693
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug