Source/JavaScriptCore/jit/ClosureCallStubRoutine.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2012, 2014 Apple Inc. All rights reserved.
+ * Copyright (C) 2012, 2014, 2015 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -39,10 +39,9 @@ namespace JSC {
 
 ClosureCallStubRoutine::ClosureCallStubRoutine(
     const MacroAssemblerCodeRef& code, VM& vm, const JSCell* owner,
-    ExecutableBase* executable, const CodeOrigin& codeOrigin)
+    ExecutableBase* executable)
     : GCAwareJITStubRoutine(code, vm)
     , m_executable(vm, owner, executable)
-    , m_codeOrigin(codeOrigin)
 {
 }
 
